small bugfix spanish text too long

--- a/src/main/webapp/styles/blogskins/sunset.css
+++ b/src/main/webapp/styles/blogskins/sunset.css
@@ -88,7 +88,7 @@ a.comments:hover {
 }
 
 .blogGeoTagLink span:hover {
-    color: #ffffff;
+    color: #008080;
 }
 
 div.commentContHead, 
